I have created the contact form but there is an issue with the responsive desing on mobiles

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -304,3 +304,8 @@ svg circle:nth-child(2) {
     line-height: 14px;
 }
 
+/*-----------Contact--------*/
+
+#contact{
+    background-color: black;
+}
